--- a/config.yaml
+++ b/config.yaml
@@ -1,16 +1,12 @@
 prefix: test
 treeSizes: 
-  - 10
+  - 50
 parameters:
-  - type: InverseGaussian
-    mu: 1.0
-    lambda: 1.0
-  - type: LogNormal
-    mu: 1.0
-    sigma: 0.1
+  - type: Static
+    dispersion: 0.1
+    extinction: 0.1
 ranges: 
   - 5
-  - 6
 programs:
   - lagrange
 repeats: 2
