just a bunch of random stuff

--- a/config.yaml
+++ b/config.yaml
@@ -1,29 +1,31 @@
 prefix: test
-treeSizes: 
-  - 64
-rate-parameters:
-  - type: InverseGaussian
-    mu: 1.0
-    lambda: 1.0
-clado-parameters:
-  - type: Dirichlet
-    allopatry: 1.0
-    sympatry: 1.0
-    copy: 1.0
-    jump: 0.0
-ranges: 
-  - 3
+trees: 
+  - taxa: 128
+    iters: 30
+models:
+  - rate-parameters:
+      dispersion:
+        type: Static
+        value: 1.0
+      extinction:
+        type: Static
+        value: 1.0
+    clado-parameters:
+      type: Static
+      allopatry: 1.0
+      sympatry: 1.0
+      copy: 1.0
+      jump: 0.0
+    ranges: 5
+    iters: 10
 programs:
   - name: lagrange
-    path: /home/computations/wrk/hits/lagrange-ng/bin/lagrange-ng
+    binary: /home/computations/wrk/hits/lagrange-ng/bin/lagrange-ng
     profile: False
     type: lagrange-ng
-  - name: lagrange-fast
-    path: /home/computations/wrk/test/lagrange-ng/bin/lagrange-ng
-    profile: False
-    type: lagrange-ng
+    options:
+      workers: 2
   - name: bigrig
-    path: /home/computations/wrk/hits/bigrig/bin/bigrig
+    binary: /home/computations/wrk/hits/bigrig/bin/bigrig
     profile: False
     type: bigrig
-repeats: 2
